--- a/TestClient/app/src/main/res/layout/activity_main.xml
+++ b/TestClient/app/src/main/res/layout/activity_main.xml
@@ -59,14 +59,14 @@
             android:id="@+id/button5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Start Agent"
+            android:text="Active Agent"
             android:onClick="onClickView"/>
 
         <Button
             android:id="@+id/button6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Stop Agent"
+            android:text="Deactive Agent"
             android:onClick="onClickView"/>
 
     </LinearLayout>
